--- a/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/vehicle-create-update/vehicle-create-update.component.html
+++ b/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/vehicle-create-update/vehicle-create-update.component.html
@@ -129,7 +129,7 @@
         </div>
 
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-sm-4">
             <div class="form-group">
               <label class="fonts">Fuel Type</label>
               <select class="form-control" [formControlName]="'fuelType'">
@@ -145,7 +145,7 @@
             </div>
           </div>
 
-          <div class="col-sm-6">
+          <div class="col-sm-4">
             <div class="form-group">
               <label class="fonts">Transmission Type</label>
               <select class="form-control" [formControlName]="'transmission'">
@@ -158,6 +158,16 @@
                 Provide
                 a Transmission Type</span>
             </div>
+          </div>
+
+          <div class="col-sm-4">
+            <label class="fonts">Seating Capacity</label>
+            <input type="number" class="form-control" placeholder="Vehicle Seating Capacity" min="0"
+              [formControlName]="'seatingCapacity'">
+            <span class="form-error"
+              *ngIf="vehicleForm.get('seatingCapacity').invalid && vehicleForm.get('seatingCapacity').touched">Please
+              Provide
+              a Valid Seating Capacity</span>
           </div>
         </div>
 
@@ -218,7 +228,8 @@
       </div>
       <div class="row mt-3">
         <div class="col-sm-12">
-          <button class="btn btn-primary float-right ml-2" style="width:30%;" type="button" [disabled]="vehicleForm.invalid || !loadedImage" (click)="createVehicle()">Create Vehicle</button>
+          <button class="btn btn-primary float-right ml-2" style="width:30%;" type="button"
+            [disabled]="vehicleForm.invalid || !loadedImage" (click)="createVehicle()">Create Vehicle</button>
           <button class="btn btn-warning float-right" style="width:30%;" matStepperPrevious
             type="button">Previous</button>
         </div>
