Introduced Price on Additional Equipment

--- a/src/app/components/admin/equipment-management/equipment-management.component.html
+++ b/src/app/components/admin/equipment-management/equipment-management.component.html
@@ -27,6 +27,7 @@
           <th class="left-header">#</th>
           <th>Equipment Name</th>
           <th>Quantity at Hand</th>
+          <th>Price Per Day</th>
           <th class="right-header">
             <span class="float-right">
               Action
@@ -44,6 +45,7 @@
               {{eachEquipment.equipmentQuantity}}
             </span>
           </td>
+          <td>{{eachEquipment.pricePerDay}}</td>
           <td>
             <i class="far fa-trash-alt icon-format float-right"
               style="color: rgba(0, 0, 0, 0.699); font-size: 20px;"></i>
