--- a/src/app/components/admin/equipment-management/equipment-create-manage/equipment-create-manage.component.html
+++ b/src/app/components/admin/equipment-management/equipment-create-manage/equipment-create-manage.component.html
@@ -32,6 +32,14 @@
             </span>
           </ng-template>
         </div>
+        <div class="form-group">
+          <label class="fonts">Price Per Day</label>
+          <input type="text" [formControlName]="'pricePerDay'" class="form-control"
+            placeholder="Provide Price Per Day..." />
+          <span class="form-error" *ngIf="theForm.get('pricePerDay').touched && theForm.get('pricePerDay').invalid">
+            Please Provide a Valid Price Per Day
+          </span>
+        </div>
       </form>
     </div>
   </div>
