Implemented whitelist and view all customers

--- a/src/app/components/admin/admin-user-management/admin-user-management.component.html
+++ b/src/app/components/admin/admin-user-management/admin-user-management.component.html
@@ -3,8 +3,44 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-12" *ngIf="userList.length > 0 && !isError; else showOtherMessages">
-
+    <div class="col-sm-12" *ngIf="filteredList.length > 0 && !isError; else showOtherMessages">
+      <table class="table table-borderless custom-table">
+        <tr class="table-header">
+          <th class="left-header">Name</th>
+          <th>Contact Information</th>
+          <th>Date of Birth (Age)</th>
+          <th>Status</th>
+          <th class="right-header">Action</th>
+        </tr>
+        <tr *ngFor="let eachUser of filteredList" class="custom-row">
+          <td>
+            <img [src]="eachUser.profilePicture" width="40" height="40" style="border-radius: 50%;">
+            <span style="padding-left: 10px;">{{eachUser.firstName |titlecase}} {{eachUser.lastName |
+              titlecase}}</span>
+          </td>
+          <td>
+            <div>
+              <span><i class="far fa-at" style="color: rgba(0, 0, 0, 0.699);"></i> : <a
+                  href="mailto:{{eachUser.emailAddress}}">{{eachUser.emailAddress}}</a></span>
+              <br>
+              <span><i class="fas fa-phone-alt" style="color: rgba(0, 0, 0, 0.699);"></i> : <a
+                  href="tel:{{eachUser.contactNumber}}">{{eachUser.contactNumber}}</a></span>
+            </div>
+          </td>
+          <td>{{eachUser.dateOfBirth | date}} ({{calculateAge(eachUser.dateOfBirth)}})</td>
+          <td>
+            <span class="badge badge-danger" *ngIf="eachUser.blackListed === true"
+              style="font-size: 14px; padding: 7px;">Account Blacklisted</span>
+            <span class="badge badge-success" *ngIf="eachUser.blackListed === false"
+              style="font-size: 14px; padding: 7px;">Account Working</span>
+          </td>
+          <td><i class="far fa-unlock"
+              [title]="eachUser.blackListed === true ? 'Whitelist the Customer' : 'Customer Already Whitelisted'"
+              [ngStyle]="{'color':getWhiteListIconStyle(eachUser.blackListed)}"
+              style="font-size: 20px; vertical-align: middle; cursor: pointer;" (click)="openWhiteListPrompt(eachUser)"></i>
+          </td>
+        </tr>
+      </table>
     </div>
     <ng-template #showOtherMessages>
       <div class="col-sm-12" *ngIf="!isError">
