--- a/src/app/components/admin/admin-user-management/white-list-prompt/white-list-prompt.component.html
+++ b/src/app/components/admin/admin-user-management/white-list-prompt/white-list-prompt.component.html
@@ -1,11 +1,24 @@
 <div class="modal-header">
-
+  <h5 class="modal-title">Whitelist Customer - {{whiteListUser.username}}</h5>
+  <button class="close" (click)="hideModal()"><span>&times;</span></button>
 </div>
 
 <div class="modal-body">
-
+  <div class="row">
+    <div class="col-sm-2 align-self-center" style="text-align: center;">
+      <i class="fal fa-exclamation-triangle" style="font-size: 45px; color: red;"></i>
+    </div>
+    <div class="col-sm-10">
+      Are you sure you want to whitelist the customer - {{whiteListUser.firstName | titlecase}}
+      {{whiteListUser.lastName}} ({{whiteListUser.username}})?
+      <br>
+      They will be able to make rentals at Banger and Co again.
+      <br><br>This action cannot be reversed.
+    </div>
+  </div>
 </div>
 
-<div class="model-footer">
-
+<div class="modal-footer">
+  <button class="btn btn-secondary float-right  ml-2" (click)="hideModal()">Close</button>
+  <button class="btn btn-primary float-right" (click)="whiteListUserDB()">Whitelist Customer</button>
 </div>
