Added vehicle rental filter component

--- a/src/app/components/guest/home/jumbotron-home/jumbotron-home.component.html
+++ b/src/app/components/guest/home/jumbotron-home/jumbotron-home.component.html
@@ -1,10 +1,10 @@
-<div class="jumbotron jumbotron-format">
+<div class="jumbotron jumbotron-format" style="margin-bottom: 0px;">
   <div class="jumbotron-overlay">
     <h1 class="display-3">Welcome to Banger and Co.</h1>
     <br>
     <p class="ml-1" style="font-size: 20px;">Make Your Trip Enjoyable By Renting Out The Best Cars at a Minimal
       Rate.</p>
 
-    <button class="btn btn-primary mt-3 custom-btn">Browse For a Vehicle Now</button>
+    <button class="btn btn-primary mt-3 custom-btn" (click)="openBrowsePanel()">Browse For a Vehicle Now</button>
   </div>
 </div>
