--- a/src/app/components/guest/home/home.component.html
+++ b/src/app/components/guest/home/home.component.html
@@ -2,7 +2,6 @@
   <app-nav-bar></app-nav-bar>
 </div>
 
-<div>
+<div style="height: 100%; width: 100;">
   <app-jumbotron-home></app-jumbotron-home>
 </div>
-
