--- a/src/app/components/guest/home/jumbotron-home/jumbotron-home.component.css
+++ b/src/app/components/guest/home/jumbotron-home/jumbotron-home.component.css
@@ -6,7 +6,7 @@
     ),
     url("../../../../../assets/jumbotron_image.jpg");
   background-size: cover;
-  height: 595px;
+  height: 100vh;
   width: 100%;
 }
 
