--- a/src/app/components/shared/vehicle-rental-filter-pop-up/vehicle-rental-filter-pop-up.component.html
+++ b/src/app/components/shared/vehicle-rental-filter-pop-up/vehicle-rental-filter-pop-up.component.html
@@ -7,18 +7,39 @@
   <div class="row">
     <div class="col-sm-12">
       <span style="color: red;"><i>We require this information in-order to show you the available vehicles for your
-          rental period.</i></span>
+          rental period.*</i></span>
     </div>
   </div>
   <div class="row mt-3">
     <div class="col-sm-6">
       <div class="form-group">
         <label class="fonts">Pickup Date</label>
+        <div class="row">
+          <div class="col-sm-10" style="padding-right: 3px;">
+            <input class="form-control" readonly="true" [matDatepicker]="pickupDatePicker"
+              placeholder="Select Pickup Date" style="width: 100%;">
+          </div>
+          <div class="col-sm-2" style="padding-left: 0px;">
+            <mat-datepicker-toggle matSuffix [for]="pickupDatePicker">
+            </mat-datepicker-toggle>
+            <mat-datepicker #pickupDatePicker></mat-datepicker>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="col-sm-6">
+    <div class=" col-sm-6">
       <div class="form-group">
         <label class="fonts">Return Date</label>
+        <div class="row">
+          <div class="col-sm-10" style="padding-right: 3px;">
+            <input class="form-control" readonly="true" placeholder="Select Return Date"
+              [matDatepicker]="returnDatePicker">
+          </div>
+          <div class="col-sm-2" style="padding-left: 0px;">
+            <mat-datepicker-toggle matSuffix [for]="returnDatePicker"></mat-datepicker-toggle>
+            <mat-datepicker #returnDatePicker></mat-datepicker>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -26,11 +47,13 @@
     <div class="col-sm-6">
       <div class="form-group">
         <label class="fonts">Pickup Time</label>
+        <timepicker></timepicker>
       </div>
     </div>
     <div class="col-sm-6">
       <div class="form-group">
         <label class="fonts">Return Time</label>
+        <timepicker></timepicker>
       </div>
     </div>
   </div>
