--- a/src/app/components/shared/vehicle-rental-filter-pop-up/vehicle-rental-filter-pop-up.component.html
+++ b/src/app/components/shared/vehicle-rental-filter-pop-up/vehicle-rental-filter-pop-up.component.html
@@ -1,34 +1,34 @@
-<form [formGroup]="rentalFilterForm" (ngSubmit)="findVehiclesAvailableForDurationInDb()">
-  <div class="modal-header">
-    <h5 class="modal-title">Provide Rental Pickup & Return Information</h5>
-    <button class="close float-right" (click)="hideModal()"><span>&times;</span></button>
-  </div>
+<div class="modal-header">
+  <h5 class="modal-title">Provide Rental Pickup & Return Information</h5>
+  <button class="close float-right" (click)="hideModal()"><span>&times;</span></button>
+</div>
 
-  <div class="modal-body">
-    <div class="row">
-      <div class="col-sm-12">
-        <span style="color: red;"><i>We require this information in-order to show you the available vehicles for your
-            rental period.*</i></span>
-      </div>
+<div class="modal-body">
+  <div class="row">
+    <div class="col-sm-12">
+      <span style="color: red;"><i>We require this information in-order to show you the available vehicles for your
+          rental period.*</i></span>
     </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <hr>
-        <div class="row">
-          <div class="col-sm-2 align-self-center">
-            <span class="fonts">Guidelines:</span>
-          </div>
-          <div class="col-sm-10">
-            <span style="font-size: 14px; font-style: italic;">
-              Please note that a rental must be minimum of 5 hours (half a day) or a maximum of 2 weeks (14 days)
-              <br>
-              A rental can be collected between 8:00am and 6:00pm and must be returned back to Banger and Co between
-              8:00am and 6:00pm
-            </span>
-          </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <hr>
+      <div class="row">
+        <div class="col-sm-2 align-self-center">
+          <span class="fonts">Guidelines:</span>
+        </div>
+        <div class="col-sm-10">
+          <span style="font-size: 14px; font-style: italic;">
+            Please note that a rental must be minimum of 5 hours (half a day) or a maximum of 2 weeks (14 days)
+            <br>
+            A rental can be collected between 8:00am and 6:00pm and must be returned back to Banger and Co between
+            8:00am and 6:00pm
+          </span>
         </div>
       </div>
     </div>
+  </div>
+  <form [formGroup]="rentalFilterForm">
     <div class="row mt-3">
       <div class="col-sm-6">
         <div class="form-group">
@@ -114,11 +114,12 @@
         </span>
       </div>
     </div>
-  </div>
+  </form>
+</div>
 
-  <div class="modal-footer">
-    <button class="float-right btn btn-danger" (click)="hideModal()" style="width: 20%;" type="button">Close</button>
-    <button class="float-right btn btn-primary" [disabled]="rentalFilterForm.invalid" type="submit">Find Available Vehicles For This
-      Period</button>
-  </div>
-</form>
+<div class="modal-footer">
+  <button class="float-right btn btn-danger" type="button" (click)="hideModal()" style="width: 20%;">Close</button>
+  <button class="float-right btn btn-primary" type="button" [disabled]="rentalFilterForm.invalid" (click)="findVehiclesAvailableForDurationInDb()">Find Available
+    Vehicles For This
+    Period</button>
+</div>
