--- a/src/app/components/guest/home/jumbotron-home/jumbotron-home.component.html
+++ b/src/app/components/guest/home/jumbotron-home/jumbotron-home.component.html
@@ -5,6 +5,6 @@
     <p class="ml-1" style="font-size: 20px;">Make Your Trip Enjoyable By Renting Out The Best Cars at a Minimal
       Rate.</p>
 
-    <button class="btn btn-primary mt-3 custom-btn" (click)="openBrowsePanel()">Browse For a Vehicle Now</button>
+    <button class="btn btn-primary mt-3 custom-btn" (click)="openBrowsePanel()">Find a Vehicle Now</button>
   </div>
 </div>
