--- a/src/app/components/guest/home/home.component.html
+++ b/src/app/components/guest/home/home.component.html
@@ -3,5 +3,5 @@
 </div>
 
 <div style="height: 100%; width: 100;">
-  <app-jumbotron-home></app-jumbotron-home>
+  <router-outlet></router-outlet>
 </div>
