--- a/src/app/components/shared/vehicle-rental-filter-pop-up/vehicle-rental-filter-pop-up.component.html
+++ b/src/app/components/shared/vehicle-rental-filter-pop-up/vehicle-rental-filter-pop-up.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h5 class="modal-title">Provide Rental Pickup & Return Information</h5>
+  <h5 class="modal-title">Lets Find Your Ideal Vehicle</h5>
   <button class="close float-right" (click)="hideModal()"><span>&times;</span></button>
 </div>
 
