implemented remove additional equipment

--- a/src/app/components/admin/equipment-management/equipment-management.component.html
+++ b/src/app/components/admin/equipment-management/equipment-management.component.html
@@ -48,7 +48,7 @@
           <td>{{eachEquipment.pricePerDay}}</td>
           <td>
             <i class="far fa-trash-alt icon-format float-right"
-              style="color: rgba(0, 0, 0, 0.699); font-size: 20px;"></i>
+              style="color: rgba(0, 0, 0, 0.699); font-size: 20px; cursor: pointer;" (click)="openDeleteEquipmentModal(eachEquipment)"></i>
             <i class="far fa-edit float-right mr-2"
               style="color: rgba(0, 0, 0, 0.699); font-size: 20px; cursor: pointer;"
               (click)="openEditAdditionalEquipment(eachEquipment.equipmentId)"></i>
