added customer filter component

--- a/src/app/components/customer/customer-home/customer-home.component.html
+++ b/src/app/components/customer/customer-home/customer-home.component.html
@@ -15,4 +15,9 @@
 
     </div>
   </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <app-vehicle-panel></app-vehicle-panel>
+    </div>
+  </div>
 </div>
