--- a/src/app/components/customer/customer-home/customer-home.component.html
+++ b/src/app/components/customer/customer-home/customer-home.component.html
@@ -9,15 +9,10 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container mt-3">
   <div class="row">
     <div class="col-sm-12">
-
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-12">
-      <app-vehicle-panel></app-vehicle-panel>
+      <button class="float-right btn btn-primary" style="width: 25%;" (click)="openVehicleRentalFilterPopup()">Rent A Vehicle</button>
     </div>
   </div>
 </div>
