--- a/src/app/components/shared/vehicle-card/vehicle-card.component.html
+++ b/src/app/components/shared/vehicle-card/vehicle-card.component.html
@@ -41,7 +41,7 @@
         <span class="fonts" style="font-size: 20px;">{{theVehicle.vehicleType.pricePerDay}}/Day</span>
       </div>
       <div class="col-sm-5" *ngIf="loggedInUser">
-        <button class="btn btn-primary float-right" *ngIf="loggedInUser.userRole=='customer'">Rent Vehicle</button>
+        <button class="btn btn-primary float-right" *ngIf="loggedInUser.userRole=='customer'" (click)="handleCustomerClick()">Rent This</button>
         <span *ngIf="loggedInUser.userRole=='administrator'">
         </span>
       </div>
